uuu widzimy samochody
do przetestowania

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 nadzaba/__pycache__/zaba_agent.cpython-39.pyc
 nadzaba/__pycache__/zaba_agent.cpython-311.pyc
+nadzaba/__pycache__/zaba_agent.cpython-311.pyc
